[package]
name = "greachers-survival"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
alsa = "=0.6.0"
bevy = { version = "0.8.1", features= [] }
rand = { version = "0.8.5", features = ["small_rng"] }
paste = "1.0"
bitmask-enum = "2.1.0"
lazy_static = "1.4.0"
